--- a/index.html
+++ b/index.html
@@ -91,37 +91,38 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Herramientas de Trabajo:</h2>
-									<p>Estás son algunas de las aplicaciones que me ayudan a crear mis proyectos<br />
-									posue.</p>
+									<p>Estás son algunas de las aplicaciones que utilizó para desarrollar mis proyectos.<br />
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+										<span class="icon brands fa-java"></span>
+										<strong>Java</strong>
 									</li>
 									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<span class="icon brands fa-python"></span>
+										<strong>Python</strong>
 									</li>
 									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<span class="icon solid fa-database"></span>
+										<strong>My SQL</strong> 
 									</li>
 									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<span class="icon brands fa-js"></span>
+										<strong>JavaScript</strong>
 									</li>
 									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+										<span class="icon brands fa-figma"></span>
+										<strong>Figma</strong> 
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+								<p class="content">
+									En el desarrollo de software, la combinación de Java y Python permite crear aplicaciones robustas y 
+									versátiles, mientras que MySQL garantiza una gestión eficiente de datos. La integración de JavaScript 
+									en el frontend mejora la interactividad, asegurando una experiencia de usuario dinámica y fluida.
+									Por otro lado, Figma es una herramienta clave en la fase de diseño, permitiendo una colaboración ágil y 
+									efectiva entre desarrolladores y diseñadores. Al unir estas tecnologías, se optimiza tanto el rendimiento 
+									como la usabilidad de las aplicaciones, logrando soluciones innovadoras y funcionales.
+								</p>
 							</section>
 
 					</div>
@@ -129,31 +130,21 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Datos de Contacto:</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dt>Localidad</dt>
+								<dd>Ciudad de México</dd>
+								<dt>Teléfono</dt>
+								<dd>5555485955</dd>
+								<dt>Correo</dt>
+								<dd><a href="#">ximenagarciauz@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://www.linkedin.com/in/ximenagu/" class="icon brands fa-linkedin alt" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/ximenagarciau" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Ximena García: <a>Todos los Derechos son Reservados</a>.</p>
 					</footer>
 
 			</div>
