--- a/generic.html
+++ b/generic.html
@@ -20,52 +20,60 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Ximena</h1>
-						<p>Ipsum dolor sit amet nullam</p>
+						<p>Desarrolladora Java Full Stack.</p>
 					</header>
 
 				<!-- Main -->
 					<div id="main">
 
 						<!-- Content -->
-							<section id="content" class="main">
-								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-								<h2>Magna feugiat lorem</h2>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
-								<h2>Tempus veroeros</h2>
-								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
-							</section>
+						<section id="content" class="main">
+							<span class="image main" style="display: flex; justify-content: center;"><img src="images/Ximena.jpg" alt="" style="height: 350px; width: auto; border: 10px solid pink; border-radius: 10px;" /></span>
+							<h2>Perfil Profesional:</h2>
+							<p>
+								Técnica en programación con experiencia en desarrollo web y análisis de datos, especializada en Python,
+								Java, JavaScript, HTML, CSS y MySQL. Apasionada por la innovación tecnológica y la optimización de procesos,
+								con el objetivo de liderar proyectos que integren soluciones eficientes. Mi trayectoria en el ámbito judicial
+								me ha dotado de habilidades blandas clave, como la comunicación efectiva, la resolución de conflictos y el liderazgo,
+								diferenciándome en el sector tecnológico. Busco oportunidades para seguir creciendo profesionalmente y ampliar mis
+								conocimientos en el desarrollo de software.
+							</p>
+							<h2>Habilidades:</h2>
+							<p>
+								MySQL | Apache NetBeans | DB Browser (SQLite) | Wampserver64 | Análisis de Datos | Bases de Datos | Git |
+								GitHub | JavaScript | Java | Python | Visual Studio | HTML | C++ | CLI (terminal) | Jira | CSS | SCRUM | Spring Boot | Figma
+							</p>
+							<p>Creatividad | Atención al detalle | Comunicación efectiva | Trabajo en equipo | Gestión de tiempo | Resolución 
+							   de problemas | Pensamiento crítico | Pensamiento lógico
+							</p>
+							<h2>Experoencia Laboral:</h2>
+							<p>
+								E-Commerce| Chicharrikos (Enero-Abril 2025)
+								Desarrollé y gestioné una plataforma de ventas en línea para botanas naturales, optimizando su funcionalidad y experiencia de usuario.
+								Implementé estrategias de marketing digital y diseñé la interfaz en Figma.
+								Programé el código fuente utilizando: HTML para la estructura de la página. CSS y JavaScript para el diseño y la interactividad. Java para el procesamiento de datos y MySQL para la gestión de la base de datos.
+								Gestioné la distribución de tareas con Jira y la metodología ágil Scrum, asegurando un desarrollo eficiente.
+								Colaboré en el control de versiones utilizando Git y GitHub.
+							</p>
+							<p>
+								Auxiliar de Impresión | Imprenta (Diciembre 2022- Julio 2023)
+								Operé maquinaria y herramientas de impresión, asegurando un funcionamiento eficiente.
+								Supervisé la calidad de los productos impresos, aplicando atención al detalle para garantizar altos estándares.
+								Colaboré con el equipo de producción para cumplir con plazos establecidos y optimizar el flujo de trabajo.
+							</p>
+							<p>
+								Auxiliar de Archivo y Documentación | Juzgados de lo Familiar (Julio-Septiembre 2021)
+								Organizé y archivé documentos legales, asegurando un acceso eficiente a la información.
+								Apoyé en la gestión de expedientes para audiencias y juicios, aplicando atención al detalle para garantizar precisión y orden.
+								Manejé bases de datos y actualicé registros, optimizando la gestión de tiempos y la disponibilidad de información clave.
+							</p>
+						</section>
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Ximena García: <a>Todos los Derechos son Reservados</a>.</p>
 					</footer>
 
 			</div>
